@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Made message font and scroll speed configurable (Jimmy Salmon)
 - Fixed rounding bug in minimap (Jimmy Salmon)
 - Added dutch translation (Foppe Benedictus, Eric Kok)
 - Fixed hot keys in different languages (Jimmy Salmon)
